Reformat code for consistency